add delete account request page

--- a/comp-footer.html
+++ b/comp-footer.html
@@ -4,6 +4,8 @@
       <div class="muted">© <span id="year"></span> Mes Petites Courses</div>
       <div>
         <a href="./privacy.html">Politique de confidentialité</a>
+        <span class="sep">·</span>
+        <a href="./contact-delete.html">Suppression de compte</a>
       </div>
     </div>
   </div>
