update structure and text

--- a/comp-features.html
+++ b/comp-features.html
@@ -1,31 +1,33 @@
 <section id="features" class="section">
-  <div class="container">
-    <header class="section-header">
-      <h2>Pourquoi vous allez adorer</h2>
-      <p class="section-subtitle">Concentrez-vous sur l'essentiel. Mes Petites Courses rend vos achats simples, rapides et sans stress.</p>
-    </header>
-    <div class="grid grid-3">
-      <div class="card feature">
-        <div class="card-body">
-          <div class="feature-icon">🛒</div>
-          <h3>Listes intelligentes</h3>
-          <p>Créez et réutilisez vos listes, avec des suggestions qui s'adaptent à vos habitudes.</p>
+    <div class="container">
+        <header class="section-header">
+            <h2>Pourquoi vous allez adorer</h2>
+            <p class="section-subtitle">Concentrez-vous sur l'essentiel. Mes Petites Courses rend vos achats simples, rapides et sans
+                stress.</p>
+        </header>
+        <div class="grid grid-3">
+            <div class="card feature">
+                <div class="card-body">
+                    <div class="feature-icon">🛒</div>
+                    <h3>Une liste modulable</h3>
+                    <p>Créez vos propres catégories, selon vos habitudes et votre organisation.</p>
+                </div>
+            </div>
+            <div class="card feature">
+                <div class="card-body">
+                    <div class="feature-icon">⚡</div>
+                    <h3>Une gestion simple</h3>
+                    <p>Cochez les articles ajoutés à votre caddie, si vous êtes plusieurs à faire vos courses, vous voyez en temps réel
+                        les articles cochés par votre conjoint.</p>
+                </div>
+            </div>
+            <div class="card feature">
+                <div class="card-body">
+                    <div class="feature-icon">🔔</div>
+                    <h3>Entièrement gratuit</h3>
+                    <p>Aucune PUB, enfin ! Profitez de l'application sans restriction et sans coupure.</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="card feature">
-        <div class="card-body">
-          <div class="feature-icon">⚡</div>
-          <h3>Parcours rapide</h3>
-          <p>Cochez vos articles, triez par rayon et gagnez du temps en magasin.</p>
-        </div>
-      </div>
-      <div class="card feature">
-        <div class="card-body">
-          <div class="feature-icon">🔔</div>
-          <h3>Rappels en temps réel</h3>
-          <p>Ne manquez plus l'essentiel grâce aux notifications et suggestions opportunes.</p>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
