--- a/comp-hero.html
+++ b/comp-hero.html
@@ -1,9 +1,9 @@
 <section class="hero">
   <div class="container hero-grid">
     <div>
-      <div class="eyebrow"><span class="dot"></span> Votre compagnon de courses</div>
+      <div class="eyebrow"><span class="dot"></span> Votre liste de courses partagée</div>
       <h1 class="hero-title">Mes Petites Courses</h1>
-      <p class="lead">Organisez vos listes, découvrez les bons plans et gagnez du temps en magasin — le tout dans une application simple et agréable.</p>
+      <p class="lead">Organisez vos listes, partagez-les et éditez-les en temps réel ! Gagnez du temps en magasin — le tout dans une application simple, gratuite et modulable.</p>
       <div class="hero-actions">
         <a class="btn btn-primary btn-lg" href="#download">Télécharger pour Android</a>
         <a class="btn btn-outline btn-lg" href="#features">En savoir plus</a>
@@ -12,7 +12,7 @@
     <div class="hero-media">
       <div class="device">
         <div class="screen">
-          <span>Aperçu de l'app</span>
+          <img src="./images/preview.jpg" alt="Aperçu de l'application Mes Petites Courses" />
         </div>
       </div>
     </div>
