--- a/comp-navbar.html
+++ b/comp-navbar.html
@@ -1,7 +1,9 @@
 <header class="navbar">
   <div class="container navbar-inner">
     <a class="brand" href="./index.html">
-      <span aria-hidden class="logo">M</span>
+      <span aria-hidden class="logo">
+          <img src="./images/icon.png">
+      </span>
       <span>Mes Petites Courses</span>
     </a>
     <nav class="nav-links">
