--- a/comp-footer.html
+++ b/comp-footer.html
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="stack-md">
       <div class="muted">© <span id="year"></span> Mes Petites Courses</div>
-      <div>
-        <a href="./privacy.html">Politique de confidentialité</a>
-        <span class="sep">·</span>
-        <a href="./contact-delete.html">Suppression de compte</a>
-      </div>
+<!--      <div>-->
+<!--        <a href="./privacy.html">Politique de confidentialité</a>-->
+<!--        <span class="sep">·</span>-->
+<!--        <a href="./contact-delete.html">Suppression de compte</a>-->
+<!--      </div>-->
     </div>
   </div>
 </footer>
