--- a/comp-head.html
+++ b/comp-head.html
@@ -4,4 +4,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./styles.css" />
+<link rel="icon" href="./images/icon.png" type="image/png" />
+<link rel="apple-touch-icon" href="./images/icon.png" />
+<meta property="og:image" content="./images/preview.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
 <script defer src="./include.js"></script>
